--- a/resource/css/home.css
+++ b/resource/css/home.css
@@ -44,3 +44,34 @@
     max-width: 1100px;
     margin: auto;
 }
+.column{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(216, 216, 216);
+    border-radius: 20px;
+}
+.vidtitle{
+    font-size: 19px;
+    font-weight: 80;
+}
+.description{
+    font-size: 15px;
+}
+.thumbnail{
+    height: 200px;
+    width: 350px;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.main-content{
+    margin: 30px 0;
+    justify-content: center;
+    display: grid;
+    grid-template-columns: 350px 350px 350px;
+    grid-template-rows: auto;
+    gap: 20px;
+}
+.title-container{
+    padding: 13px 25px;
+}
